# autotools-template

./: .gitignore  Makefile  Makefile.am  README  configure.ac  configure~
include/: hello.hpp
lib/: Makefile.am
m4/: gnulib-cache.m4  gnulib-comp.m4
src/: Makefile.am  hello.cpp  main.cpp
test/: Makefile.am  test_hello.cpp
